@@ -10,6 +10,7 @@
 --【Compiler】"++x"や"y--"等の記述を可能にしました。
 --【Auth】ユーザ管理まわりを大幅更新しました。
 --【Auth】ログイン失敗sleep（fail_sleep）機能を削除しました。((sleepしたところで複数同時ログインを試みればセキュリティ対策として意味がないため。))
+--{<$Form_options.multipart_data_max_size>} オプションを削除しました。
 -【DB】DB再接続機能を付けました。
 -【DB】prapere() を prapere_cached() に変更しました。
 --フォーム処理を更新しました。
